# much-ado-about-noising

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  test_gpu_speedup.py  upload_to_hf.py
.github/workflows/: deploy.yaml  python-ci.yaml
docs/: .gitignore  design.md  how_to_implement.md  index.md  package-lock.json  package.json  plan.md  port_new_task.md
docs/.vitepress/: config.mts
docs/development/: add_new_architecture.md  add_new_method.md  add_new_task.md
docs/getting-started/: configuration.md  design.md  quick_start.md
docs/help/: faq.md  troubleshooting.md
examples/: download_and_load_robomimic.py  pi0_pytorch.diff  process_robomimic_dataset.py  process_single_robomimic_dataset.py  test_all.py  test_all_robomimic.sh  test_kitchen.py  test_pusht.py  test_robomimic.py  train_kitchen.py  train_pusht.py  train_robomimic.py
examples/configs/: main.yaml
examples/configs/exps/: debug.yaml
examples/configs/launcher/: babel.yaml  basic.yaml  cluster.yaml  faircluster.yaml
examples/configs/log/: default.yaml
examples/configs/network/: _base.yaml  chitransformer.yaml  chiunet.yaml  jannerunet.yaml  mlp.yaml  rnn.yaml  sudeepdit.yaml  vanilla_mlp.yaml  vanilla_rnn.yaml
examples/configs/optimization/: default.yaml
examples/configs/task/: can_mh_image.yaml  can_mh_state.yaml  can_mh_state_abs.yaml  can_mh_state_delta.yaml  can_mh_state_delta_legacy.yaml  can_mh_state_rel.yaml  can_ph_image.yaml  can_ph_state.yaml  can_ph_state_abs.yaml  can_ph_state_delta.yaml  can_ph_state_delta_legacy.yaml  can_ph_state_rel.yaml  kitchen_state.yaml  lift.yaml  lift_image.yaml  lift_mh_image.yaml  lift_mh_state.yaml  lift_mh_state_abs.yaml  lift_mh_state_delta.yaml  lift_mh_state_delta_legacy.yaml  lift_mh_state_rel.yaml  lift_ph_image.yaml  lift_ph_state.yaml  lift_ph_state_abs.yaml  lift_ph_state_delta.yaml  lift_ph_state_delta_legacy.yaml  lift_ph_state_rel.yaml  pusht_base.yaml  pusht_image.yaml  pusht_keypoint.yaml  pusht_state.yaml  robomimic_base.yaml  square_mh_image.yaml  square_mh_state.yaml  square_mh_state_abs.yaml  square_mh_state_delta.yaml  square_mh_state_delta_legacy.yaml  square_mh_state_rel.yaml  square_ph_image.yaml  square_ph_state.yaml  (+22 more)
examples/process_dataset/: convert_robomimic_abs_actions.py  process_kitchen_dataset.py  process_pusht_data.py  process_robomimic_dataset.py  process_single_robomimic_dataset.py
examples/test_training/: test_kitchen.py  test_pusht.py  test_robomimic.py
mip/: action_utils.py  agent.py  agent_test.py  config.py  dataset_utils.py  embeddings.py  encoders.py  encoders_test.py  env_utils.py  env_utils_test.py  flow_map.py  flow_map_test.py  interpolant.py  interpolant_test.py  logger.py  logger_test.py  losses.py  losses_test.py  network_utils.py  samplers.py  samplers_test.py  scheduler.py  scheduler_test.py  torch_utils.py
mip/datasets/: base.py  imagecodecs.py  kitchen_dataset.py  kitchen_dataset_test.py  pusht_dataset.py  pusht_dataset_test.py  putht_dataset.py  robomimic_dataset.py  robomimic_dataset_test.py  rotation_conversion.py
mip/envs/: robomimic_env.py  robomimic_env_test.py  robomimic_image_wrapper.py  robomimic_lowdim_wrapper.py
mip/envs/kitchen/: __init__.py  kitchen_env_test.py  kitchen_env_wrapper.py
mip/envs/kitchen/kitchen_thirdparty/: __init__.py  base.py  kitchen_lowdim_wrapper.py  kitchen_util.py  v0.py
mip/envs/kitchen/kitchen_thirdparty/relay_policy_learning/adept_envs/adept_envs/: __init__.py  base_robot.py  mujoco_env.py  robot_env.py
mip/envs/kitchen/kitchen_thirdparty/relay_policy_learning/adept_envs/adept_envs/franka/: kitchen_multitask_v0.py
mip/envs/kitchen/kitchen_thirdparty/relay_policy_learning/adept_envs/adept_envs/franka/robot/: franka_robot.py
mip/envs/kitchen/kitchen_thirdparty/relay_policy_learning/adept_envs/adept_envs/simulation/: module.py  renderer.py  sim_robot.py
mip/envs/kitchen/kitchen_thirdparty/relay_policy_learning/adept_envs/adept_envs/utils/: config.py  configurable.py  parse_demos.py
mip/envs/pusht/: __init__.py  pusht_env.py  pusht_env_wrapper.py  pusht_image_env.py  pusht_keypoints_env.py  pymunk_keypoint_manager.py  pymunk_override.py
mip/envs/robomimic/: robomimic_env.py  robomimic_env_test.py  robomimic_image_wrapper.py  robomimic_lowdim_wrapper.py
mip/networks/: base.py  chitfm.py  chiunet.py  jannerunet.py  mlp.py  mlp_test.py  networks_test.py  rnn.py  sudeepdit.py
notebooks/: lipschitz_behavior.py
tests/: action_utils_test.py  agent_test.py  encoders_test.py  interpolant_test.py  losses_test.py  networks_test.py  samplers_test.py
toyexp/toyexp/: README.md
toyexp/toyexp/report/: report.tex
toyexp/toyexp/toyexp/common/: analyze_results.py  config.py  datasets.py  integrate.py  logging_utils.py  losses.py  networks.py  utils.py
toyexp/toyexp/toyexp/configs/: config_lie.yaml  config_proj.yaml  config_recon.yaml
toyexp/toyexp/toyexp/scripts/: run_mode_comparison.py  train_lie.py  train_proj.py  train_recon.py
